fixed Safari CSS issue -webkit-backface-visibility: hidden;

--- a/styles/app.css
+++ b/styles/app.css
@@ -211,6 +211,7 @@ footer {
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
 }
 
 /* Style the front side (fallback if image is missing) */
@@ -232,6 +233,7 @@ footer {
     transform: translate(-50%, -50%);
     position: absolute;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
   }
 
 
